# smog_strat_dex_rs

./: Cargo.toml
examples/: randomizer.rs
src/: basics.rs  format.rs  generation.rs  lib.rs  pokemon.rs
