[package]
name = "smog_strat_dex_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ['derive'] }
serde_json = "1.0.93"
thiserror = "1.0.38"
reqwest = {version = "0.11.14", features = ['json'] }

[dev-dependencies]
tokio = {version = "1.25.0", default-features = false, features = ['macros', "rt-multi-thread"] }
rand = "0.8.5"