[package]
name = "smog_strat_dex_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ['derive'] }
serde_json = "1"
thiserror = "1"
reqwest = {version = "0.11", features = ['json'] }

[dev-dependencies]
clap = {version = "4", features = ['derive'] }
tokio = {version = "1", default-features = false, features = ['macros', "rt-multi-thread"] }
rand = "0.8"